# akana

./: .clippy.toml  .env.example  .gitignore  .rusty-hook.toml  Cargo.toml  LICENSE  README.md  docker-compose.yml
api/: Cargo.toml
api/src/: auth.rs
api/src/auth/: handlers.rs  jwt.rs
server/: Cargo.toml
server/assets/: world.ldtk
server/assets/prototypes/items/: apple.yaml  banana.yaml
server/assets/prototypes/props/: horizontal_door.yaml  vertical_door.yaml
server/assets/prototypes/tiles/: interior.yaml  path.yaml  wall.yaml
server/src/: main.rs
server/src/auth/: api.rs  components.rs  mod.rs  systems.rs  utils.rs
server/src/auth/components/: authenticating.rs  mod.rs
server/src/auth/systems/: mod.rs  perform_authentication.rs
server/src/auth/utils/: api.rs
server/src/items/: mod.rs
server/src/items/components/: backpack.rs  can_take.rs  item.rs  mod.rs
server/src/items/systems/: backpack.rs  drop.rs  mod.rs  take.rs
server/src/network/: errors.rs  events.rs  messages.rs  mod.rs  server.rs  systems.rs
server/src/player/: components.rs  events.rs  mod.rs  systems.rs
server/src/player/components/: character.rs  client.rs  mod.rs  online.rs
server/src/player/events/: mod.rs  prompt_event.rs
server/src/player/systems/: emit_prompt_on_input.rs  handle_network_events.rs  mod.rs  send_prompt.rs
server/src/social/: mod.rs  systems.rs
server/src/social/systems/: emote.rs  mod.rs  say.rs
server/src/spatial/: components.rs  mod.rs  systems.rs
server/src/test/: bundles.rs
server/src/visual/: components.rs  mod.rs  palette.rs
server/src/world/: components.rs  mod.rs  resources.rs  systems.rs
(+26 files in other folders)
