[package]
name = "api"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = "0.5.6"
bcrypt = "0.13.0"
database = { path = "../database" }
diesel = { version = "1.4.8", features = ["postgres"] }
dotenv = "0.15.0"
jsonwebtoken = "8.1.0"
serde = { version = "1.0.137", features = [ "derive" ] }
tokio = { version = "1.18.0", features = [ "full" ] }

[dev-dependencies]
rusty-hook = "0.11.2"
